Allow sentry_repo to be customised

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # defaults file for sentry_selfhosted
 
 sentry_docker_compose_project_folder: /opt/docker/sentry
+sentry_git_repo: https://github.com/getsentry/self-hosted.git
 sentry_version: 21.1.0
 sentry_bind: 9000
 
